layouts/_default/index.stylesheet.css
/* ... */
.copyleft {
  display: inline-block;
  transform: rotate(180deg);
}
/* 404
-------------------------------------------------- */
.not-found {
  margin-left: auto;
  margin-right: auto;
  width: 320px;
  font-size: 160px;
  font-weight: bold;
}

/* Flexbox, grid and linear-gradient support
-------------------------------------------------- */
@supports(display:flex) {
  .nav {
    display: flex;
	  flex-direction: row;
    justify-content: space-around;
    flex-wrap: wrap;
    padding: 0;
  }
  .logo,
  .menu {
    display: flex;
    width: auto;
  }
  .logo {
    padding: 5px 10px;
  }
  .picture-license {
    display: flex;
    align-items: flex-end;
    justify-content: center;
  }
  .profile-wrapper {
    display: flex;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    justify-content: center;
    margin: 0;
  }
  .profile-wrapper img {
    margin: 0;
    max-height: 300px;
  }
  .picture-license {
    display: flex;
    align-items: flex-end;
    justify-content: center;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: 0;
  }
  .main {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    flex-grow: 1;
    margin: 0;
    max-width: 815px;
  }
  .list, .single {
	  display: flex;
	  align-items: center;
	  flex-direction: column;
  }
  .h-entry, .h-feed {
    margin: 0;
  }
  .pagination {
    display: flex;
    justify-content: space-between;
    margin: 0 12px;
  }
  .filter-button-container {
    display: flex;
    justify-content: flex-end;
    margin-bottom: 20px;
    gap: 10px;
  }
  .posts {
    display: flex;
    flex-direction: column;
    gap: 24px;
  }
  .first-entry {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-top: 0;
  }
  .post-entry {
    margin: 0;
  }
  .entry-footer {
    display: flex;
    justify-content: space-between;
  }
  .entry-tag-container {
    display: flex;
    justify-content: flex-start;
    flex-wrap: wrap;
    gap: 5px;
  }
  .tags-bubble-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
  }
  .category-seperator {
    margin: -10px 0;
    align-self: center;
  }
  .not-found {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0;
  }
}

@supports(display:grid) {
  .table-row {
    display: grid;
    grid-template-columns: 1.5fr 0.5fr .6fr;
  }
  .small-row {
    width: auto;
  }
  .about-columns {
    display:grid;
    grid-template-columns: 1fr 1fr 1fr;
  }
}

@supports(background: linear-gradient(70deg, {{ .Site.Params.primary_colour }} -5%, {{ .Site.Params.secondary_colour }} 80%)) {
  .header {
    background-image: radial-gradient(70% 53% at 36% 76%, {{ .Site.Params.secondary_colour }}FF 0%, {{ .Site.Params.secondary_colour }}00 100%),
                      radial-gradient(21% 37% at 72% 23%, {{ .Site.Params.secondary_colour }}9C 24%, {{ .Site.Params.secondary_colour }}00 100%),
                      radial-gradient(35% 56% at 91% 74%, {{ .Site.Params.primary_colour }}F5 9%, {{ .Site.Params.secondary_colour }}00 100%),
                      radial-gradient(74% 86% at 67% 38%, {{ .Site.Params.secondary_colour }}5F 24%, {{ .Site.Params.secondary_colour }}00 100%),
                      linear-gradient(125deg, {{ .Site.Params.primary_colour }}FF 1%, {{ .Site.Params.secondary_colour }}FF 100%);
  }
}

@supports(display: flow-root) {
  .copyleft {
    display: inline flow-root;
  }
}

/* Mobile support (assumes flexbox and grid)
-------------------------------------------------- */
@media only screen and (max-width: 768px) {
	.nav {
		margin: 18px 0 0 12px;
		flex-direction: column;
		width: 140px;
	}
	.logo {
		font-size: 28px;
		margin: 0;
		padding: 0;
		margin-block-start: 0;
		margin-block-end: 0;
	}
	.menu {
		flex-direction: column;
		gap: 8px;
	}
	.logo h1, .logo span {
    margin-left: 15px;
	}
	.first-entry .entry-header h2 {
    font-size: 32px;
  }
	.post-title {
    font-size: 28px;
  }
  .about-columns {
    grid-template-columns: 1fr 1fr;
  }
}
@media only screen and (max-width: 525px) {
  .entry-tag-container {
    display: none;
  }
  .about-columns {
    grid-template-columns: 1fr;
  }
}

